--- a/index.html
+++ b/index.html
@@ -2,11 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+    <title>Title</title>
+    <style>
+    .box {display: flex;}
+    model-viewer {width: 800px; height: 600px; margin: 0, auto;}
+  </style>
 </head>
 <body>
-    
+<div class="box">
+    <div><p>TEXT</p></div>
+    <!--<div><model-viewer src="assets/images/sm.glb"></model-viewer>-->
+    <model-viewer src="astronaut.glb"
+                  alt="A 3D model of an astronaut"
+                  ar
+                  auto-rotate
+                  camera-controls></model-viewer>
+</div>
+</div>
 </body>
 </html>
