--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
 <div class="box">
     <div><p>TEXT</p></div>
     <!--<div><model-viewer src="assets/images/sm.glb"></model-viewer>-->
-    <model-viewer src="astronaut.glb"
-                  alt="A 3D model of an astronaut"
-                  ar
-                  auto-rotate
-                  camera-controls></model-viewer>
+    <model-viewer src="astronaut.glb" alt="A 3D model of an astronaut" ar auto-rotate camera-controls></model-viewer>
 </div>
 </div>
 </body>
