--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
     <style>
     .box {display: flex;}
     model-viewer {width: 800px; height: 600px; margin: 0, auto;}
+    .fourcade{
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
   </style>
 </head>
 <body>
 <div class="box">
-    <div><p>TEXT</p></div>
-    <!--<div><model-viewer src="assets/images/sm.glb"></model-viewer>-->
-    <model-viewer src="astronaut.glb" alt="A 3D model of an astronaut" ar auto-rotate camera-controls></model-viewer>
+    <div class="fourcade">
+        <div><p>Fourcade</p></div>
+        <model-viewer src="astronaut.glb" alt="A 3D model of an astronaut" ar auto-rotate camera-controls></model-viewer>
+    </div>
 </div>
 </div>
 </body>
