--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <title>Title</title>
     <style>
+        *{
+            font-family: sans-serif;
+            margin: 0;
+            padding: 0;
+        }
     .box {display: flex;}
     model-viewer {width: 800px; height: 600px; margin: 0, auto;}
     .fourcade{
@@ -13,6 +18,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
     }
   </style>
 </head>
